src/test/deca/context/valid/decl_class.deca
class A {
int x;
}
{
A p = new A();
A a = p;
int x = p.x;
}