src/test/deca/context/invalid/double_decl_method_diff_signature.deca
class A { 
boolean equals(Object o, int a){
}
}